Close #1: Guest visits about page
* Add styling to landing page
* Add styling to about page
* Add about action to welcome controller
* Add headshot image

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,7 +1,19 @@
-.center {
+.center-align {
   margin: auto;
-  width: 15%;
+  width: 60%;
 }
-.content {
-  padding: 8%;
+.center-text {
+  text-align: center;
+}
+.container {
+  padding: 18%;
+}
+#headshot {
+  width: 200px;
+  height: 200px;
+}
+#about-me {
+  margin: auto;
+  width: 80%;
+  font-size: 18px;
 }
