Continue work on projects page
* Create link helper for return to homepage link
* Style project page views
* Add website and github urls to projects
* Add sample projects to seed file
* Add project images to public folder

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,3 +9,13 @@ body {
 h1 {
   font-family: 'Georgia'
 }
+.center-align {
+  margin: auto;
+  width: 60%;
+}
+.center-text {
+  text-align: center;
+}
+.container {
+  padding: 18%;
+}
