--- a/app/views/welcome/about.html.haml
+++ b/app/views/welcome/about.html.haml
@@ -28,4 +28,4 @@
     |
     = link_to 'LinkedIn', 'https://linkedin.com/in/patrickwey'
   %br
-  .center-text= link_to 'Return to Homepage', root_path
+  .center-text= link_to_homepage
