Add to _project.html.haml
* A project without a website does not have a website link
* Add has_website? method to project model

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,7 +7,10 @@ body {
   font-family: 'Courier New';
 }
 h1 {
-  font-family: 'Georgia'
+  font-family: 'Georgia';
+}
+.title {
+  font-style: italic;
 }
 .center-align {
   margin: auto;
