--- a/app/views/welcome/about.html.haml
+++ b/app/views/welcome/about.html.haml
@@ -16,7 +16,7 @@
         the Caroll School of Management with a concentration in Information
         Systems.
       %p
-        I then spent two years playing professional hockey in the
+        After college, I spent two years playing professional hockey in the
         Washington Capitals organization before deciding to turn my
         programming hobby into a full time pursuit.
 
