--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -4,6 +4,6 @@
   .links
     = link_to 'About', about_path
     |
-    = link_to 'Blog'
+    = link_to 'Blog', posts_path
     |
     = link_to 'Projects', projects_path
