--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,11 @@
 .content
-  %h1.title Blog
+  %h1.title.center-text Blog
 
-  .posts
+  .posts.center-align
     - @posts.each do |post|
-      = render partial: 'post', locals: { post: post }
+      .center-align
+        = render partial: 'post', locals: { post: post }
+        %br
+
+  %br
+  .center-text= link_to_homepage
