--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,8 @@
     = csrf_meta_tags
 
   %body
+    .flash
+      - flash.each do |type, msg|
+        = content_tag :div, msg, class: "flash-#{type}"
+
     = yield
