Add factories and finish _project view testing

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,7 +3,7 @@
 .content
   %h1.title.center-text Blog
 
-  .posts.center-align
+  .posts
     .center-text
       Pat has thoughts. They are coming soon.
     - @posts.each do |post|
